# LeoVultana

./: .gitignore  CMakeLists.txt  README.md
Assets/Scenes/: GLTFSample.json  LibraryTest.json
Assets/Shaders/GLSL/: GLTFBasePass-frag.glsl  GLTFBasePass-vert.glsl
Assets/Shaders/GLSL/Common/: GLTF_VS2PS_IO.glsl  PBRTextures.glsl  PerFrameStruct.h  Skinning.h
CMake/: Common.cmake
Common/: CMakeLists.txt  PCH.h
Common/Function/: Async.cpp  Async.h  AsyncCache.h  Camera.h  ColorConversion.cpp  ColorConversion.h  DDSLoader.h  DXGIFormatHelper.cpp  DXGIFormatHelper.h  Error.h  Hash.cpp  Hash.h  ImgLoader.h  Misc.cpp  Misc.h  Ring.h  ThreadPool.cpp  ThreadPool.h  WICLoader.cpp  WICLoader.h  WirePrimitives.cpp  WirePrimitives.h
Common/GLTF/: GLTFCommon.cpp  GLTFCommon.h  GLTFHelpers.cpp  GLTFHelpers.h  GLTFPBRMaterial.cpp  GLTFPBRMaterial.h  GLTFPbrMaterial.cpp  GLTFPbrMaterial.h  GLTFStructures.h
Common/RHI/Vulkan/: CMakeLists.txt  CommandListRingVK.cpp  CommandListRingVK.h  DevicePropertiesVK.cpp  DevicePropertiesVK.h  DeviceVK.cpp  DeviceVK.h  DynamicBufferRingVK.cpp  DynamicBufferRingVK.h  ExtDebugUtilsVK.cpp  ExtDebugUtilsVK.h  ExtFP16VK.cpp  ExtFP16VK.h  ExtFreeSyncHDRVK.cpp  ExtFreeSyncHDRVK.h  ExtRayTracingVK.cpp  ExtRayTracingVK.h  ExtVRSVK.cpp  ExtVRSVK.h  ExtValidationVK.cpp  ExtValidationVK.h  FrameworkWindowsVK.cpp  FrameworkWindowsVK.h  FreeSyncHDRVK.cpp  FreeSyncHDRVK.h  GBufferVK.cpp  GBufferVK.h  GPUTimeStampsVK.cpp  GPUTimeStampsVK.h  HelperVK.cpp  HelperVK.h  ImGuiVK.cpp  ImGuiVK.h  InstancePropertiesVK.cpp  InstancePropertiesVK.h  InstanceVK.cpp  InstanceVK.h  PCHVK.h  ResourceViewHeapsVK.cpp  ResourceViewHeapsVK.h  (+10 more)
Common/RHI/Vulkan/GLTFRenderPasses/: GLTFBBoxPassVK.h  GLTFBaseMeshPassVK.cpp  GLTFDepthPassVK.cpp  GLTFDepthPassVK.h  GLTFHelpersVK.h  GLTFMotionVectorsPassVK.h  GLTFPBRPassVK.cpp  GLTFPBRPassVK.h  GLTFTexturesAndBuffersVK.cpp  GLTFTexturesAndBuffersVK.h
Common/RHI/Vulkan/GLTF_VK/: GLTFBBoxPassVK.cpp  GLTFBBoxPassVK.h  GLTFBaseMeshPassVK.cpp  GLTFBaseMeshPassVK.h  GLTFDepthPassVK.cpp  GLTFDepthPassVK.h  GLTFHelpers.cpp  GLTFHelpers.h  GLTFHelpersVK.cpp  GLTFHelpersVK.h  GLTFMotionVectorsPassVK.cpp  GLTFPBRPassVK.cpp  GLTFPBRPassVK.h  GLTFPbrPassVK.cpp  GLTFPbrPassVK.h  GLTFTexturesAndBuffersVK.cpp  GLTFTexturesAndBuffersVK.h
Common/RHI/Vulkan/PostProcess/: MagnifierPS.cpp  MagnifierPS.h  PostProcessPS.cpp  PostProcessPS.h  SkyDome.cpp  SkyDome.h
Common/RHI/Vulkan/VKCommon/: CommandListRingVK.h  DevicePropertiesVK.cpp  DeviceVK.cpp  DeviceVK.h  DynamicBufferRingVK.cpp  DynamicBufferRingVK.h  ExtDebugUtilsVK.cpp  ExtDebugUtilsVK.h  ExtFP16VK.cpp  ExtFP16VK.h  ExtFreeSyncHDRVK.cpp  ExtFreeSyncHDRVK.h  ExtRayTracingVK.cpp  ExtRayTracingVK.h  ExtVRSVK.cpp  ExtVRSVK.h  ExtValidationVK.cpp  ExtValidationVK.h  FrameworkWindowsVK.cpp  FrameworkWindowsVK.h  FreeSyncHDRVK.cpp  FreeSyncHDRVK.h  GBufferVK.cpp  GBufferVK.h  GPUTimeStampsVK.h  HelperVK.cpp  HelperVK.h  ImGuiVK.cpp  InstancePropertiesVK.cpp  InstancePropertiesVK.h  InstanceVK.cpp  PCHVK.h  ResourceViewHeapsVK.cpp  ResourceViewHeapsVK.h  ShaderCompilerHelperVK.cpp  ShaderCompilerHelperVK.h  StaticBufferPoolVK.cpp  StaticBufferPoolVK.h  SwapChainVK.cpp  SwapChainVK.h  (+4 more)
Common/RHI/Vulkan/Widgets/: AxisVK.cpp  AxisVK.h  CheckerBoardFloorVK.cpp  CheckerBoardFloorVK.h  WireframeBoxVK.cpp  WireframeBoxVK.h  WireframeSphereVK.cpp  WireframeSphereVK.h  WireframeVK.cpp  WireframeVK.h
Common/Utilities/: Async.cpp  AsyncCache.h  Benchmark.cpp  Benchmark.h  Camera.cpp  DDSLoader.cpp  DDSLoader.h  DXCHelper.cpp  DXCHelper.h  DXGIFormatHelper.cpp  DXGIFormatHelper.h  Error.cpp  Error.h  ImGuiHelper.cpp  ImGuiHelper.h  ImgLoader.cpp  ImgLoader.h  Misc.h  PCH.h  Ring.h  Sequence.cpp  Sequence.h  ShaderCompiler.cpp  ShaderCompiler.h  ShaderCompilerCache.cpp  ShaderCompilerCache.h
Projects/: CMakeLists.txt  ProjectPCH.h
Projects/GLTFSample/: GLTFSample.cpp  GLTFSample.h  GLTFSamplePCH.h  Renderer.cpp  Renderer.h  UI.cpp  UI.h
Projects/HelloTriangle/: Triangle.cpp
Projects/LibraryTest/: LibraryTest.cpp  LibraryTest.h  Renderer.cpp  Renderer.h  UIState.cpp  UIState.h
